<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:background="@drawable/selector_listview_item">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivAvatars" android:src="@drawable/home_avatasnhac"
            android:layout_margin="@dimen/home_item_marginTop_ivAvatas"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameOfDirector"
                android:id="@+id/tvNameOfDirector"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true" android:textColor="#333333"
                android:textSize="@dimen/home_item_textSize_tvNamDirector" android:layout_marginTop="5dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleOfSong"
                android:id="@+id/tvTitleOfSong"
                android:layout_above="@+id/tvNameOfDirector"
                android:layout_centerVertical="true"
                android:textStyle="bold" android:textSize="@dimen/home_item_textSize_title"
                android:textColor="#333333"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numberLike"
                android:id="@+id/tvNumberOfLiked"
                android:layout_below="@+id/tvNameOfDirector"
                android:layout_centerVertical="true"
                android:textColor="#777777" android:textSize="@dimen/home_item_textSize_tvNumberOfClick"
                android:layout_marginTop="5dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numberComment"
                android:id="@+id/tvNumberOfComment"
                android:layout_below="@+id/tvNameOfDirector"
                android:layout_toRightOf="@+id/tvNumberOfLiked"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp" android:textSize="@dimen/home_item_textSize_tvNumberComment"
                android:layout_marginTop="5dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" android:layout_marginRight="5dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numberTimePost"
                    android:id="@+id/tvNumberOfPostedDay" android:layout_marginRight="5dp" android:textColor="#a7a7a7"
                    android:textSize="@dimen/home_item_textSize_tvNumberOfPostedDay"
                    android:layout_gravity="center_vertical"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/navigation_imgNext" android:src="@drawable/navigation_nextimage"
                    android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>