<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="#eeeeee">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="center"
            android:background="@drawable/navbar1" android:minHeight="35dp">
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_btBack"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="6dp"
                android:layout_centerVertical="true"
                android:background="@drawable/common_custom_btnback"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_btDone"
                android:enabled="true"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/login_btBack"
                android:background="@drawable/custom_button_done"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="5dp" android:layout_marginLeft="5dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_tvLogin"
                android:id="@+id/textView"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                />
    </RelativeLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:background="@drawable/login_backgroundemailandpass"
            android:layout_gravity="center" android:layout_marginLeft="10dp" android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1">
            <EditText android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:drawableLeft="@drawable/icon_email"
                      android:background="@null"
                      android:id="@+id/login_et_email"
                      android:drawablePadding="5dp"
                      android:text="qsoft@gmail.com  "
                      android:layout_weight="1" android:layout_marginLeft="10dp" android:layout_marginRight="5dp"
                      android:layout_gravity="left|center_vertical" android:hint="@string/login_edtEmailHint"
                      android:singleLine="true" android:textSize="16sp" android:textColor="#333333"/>
            <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:layout_centerVertical="true" android:id="@+id/login_ib_cancelOfEmail"
                         android:src="@drawable/login_incondelete"
                         android:background="@null"
                         android:visibility="invisible"
                         android:layout_alignParentRight="true"
                         android:layout_alignTop="@+id/login_et_email"
                         android:layout_gravity="center_vertical"
                         android:layout_marginRight="10dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_gravity="center" android:layout_weight="1">
            <EditText android:layout_width="wrap_content" android:layout_height="match_parent"
                      android:drawableLeft="@drawable/icon_password" android:background="@null"
                      android:id="@+id/login_et_Pass" android:layout_gravity="left|center_vertical"
                      android:layout_weight="1"
                      android:password="true"
                      android:text="e10adc3949ba59abbe56e057f20f883e"
                      android:drawablePadding="5dp"
                      android:layout_marginLeft="10dp" android:layout_marginRight="5dp"
                      android:hint="@string/login_edtPasswordHint" android:singleLine="true" android:textSize="16sp"
                      android:textColor="#333333"/>
            <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:id="@+id/login_ib_cancelOfPass" android:src="@drawable/login_incondelete"
                         android:layout_gravity="center_vertical"
                         android:background="@null"
                         android:visibility="invisible"
                         android:layout_alignRight="@+id/login_et_Pass"
                         android:layout_centerVertical="true"
                         android:layout_marginRight="10dp"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tvForgotPass"
            android:id="@+id/textView1" android:layout_gravity="center" android:layout_marginTop="5dp"
            android:textColor="#b1b1b1" android:textSize="14sp"/>
</LinearLayout>